# dst-server-admin

./: .dockerignore  .gitignore  .npmrc  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  build.rs  cats.db  eslint.config.js  go.sh  mc.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: deploy-server.yml  deploy.yml  image.yml
asset/: Cargo.toml
asset/src/: lib.rs
asset/static/: install.bat  install.sh  install_macOS.sh  install_macOS2.json  install_windows.bat  run_cluster.sh  stop_cluster.sh  test.sh
server/: Cargo.toml
server/asset/src/: lib.rs
server/asset/static/: dst.sh  install.sh  install_linux.sh  t.bat
server/core/: Cargo.toml  Config.toml  PathWindows.toml  build.rs  cats.db
server/core/script/: install_cmd.sh  t.bat
server/core/src/: main.rs
server/core/src/api/: game.rs  mod.rs  res.rs  route.rs  router.rs  system.rs  un_auth.rs  user.rs
server/core/src/bootstrap/: init.rs  mod.rs
server/core/src/config/: config.rs
server/core/src/constant/: mod.rs  path.rs
server/core/src/context/: command_pool.rs  mod.rs  path_setting.rs  static_config.rs
server/core/src/db/: db.rs
server/core/src/routes/: app.rs  mod.rs
server/core/src/service/: game.rs  mod.rs  s_user.rs
server/core/src/utils/: file.rs  mod.rs  path.rs  shell.rs
server/core/static/: index.html
server/src/: main.rs
server/src/api/: game.rs  mod.rs  res.rs  route.rs  system.rs  un_auth.rs
server/src/bootstrap/: init.rs  mod.rs
server/src/config/: config.rs
server/src/constant/: path.rs
server/src/db/: db.rs
server/src/service/: game.rs  mod.rs  task.rs
server/src/utils/: file.rs  mod.rs  shell.rs  system.rs
server/static/: test.sh
static/: Global.toml  Path.toml
static/resources/templates/Cluster/Caves/: server.ini
static/resources/templates/Cluster/Forest/: server.ini
web/: eslint.config.js  package.json  vite.config.ts
web/src/: App.tsx  const.ts  index.css  routeTree.gen.ts
web/src/components/: index.ts
web/src/components/CardMods/: index.style.ts  index.tsx
web/src/components/CardSaves/: index.style.ts  index.tsx
web/src/components/CardServer/: index.style.ts  index.tsx
web/src/components/CardSystem/: index.style.ts  index.tsx
web/src/routes/: __root.tsx  home.tsx  home_bak.tsx  test.tsx
web/src/routes/cluster/: cool.lazy.tsx  form.lazy.tsx
web/src/routes/initialize/: mode.lazy.tsx
