[package]
name = "server"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asset = {path = "../asset"}

anyhow = "1.0.93"
axum = "0.7.7"
dirs = "5.0.1"
include_dir = "0.7.4"
mime = "0.3.17"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rusqlite = {version = "0.32.1", features = ["bundled"]}
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
sysinfo = "0.32.0"
tokio = { version = "1.41.1", features = ["rt", "macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.18"
