[package]
name = "server"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asset = { path = "../asset" }

anyhow = "1.0.93"
axum = "0.7.7"
dirs = "5.0.1"
include_dir = "0.7.4"
mime = "0.3.17"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
sysinfo = "0.32.0"
tokio = { version = "1.41.1", features = ["full"] }
tracing-subscriber = "0.3.18"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace", "cors"] }
tempfile = "3.14.0"
reqwest = "0.12.9"
zip = "2.2.0"
rust-ini = "0.21.1"
cargo-watch = "8.5.3"
psutil = "3.3.0"
once_cell = "1.20.2"
decimal = "2.1.0"
rust_decimal = "1.36.0"
regex = "1.11.1"
