[package]
name = "server"
version = "0.1.0"
edition = "2021"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asset = { path = "../asset" }
anyhow = "1.0.93"
axum = { version = "0.8.1" }
dirs = "6.0.0"
include_dir = "0.7.4"
mime = "0.3.17"
r2d2 = "0.8.10"
r2d2_sqlite = "0.26.0"
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sysinfo = "0.33.1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.13"
tokio-stream = "0.1.17"
tracing-subscriber = "0.3.18"
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["full"] }
tempfile = "3.14.0"
reqwest = "0.12.9"
zip = "2.2.0"
rust-ini = "0.21.1"
cargo-watch = "8.5.3"
once_cell = "1.20.2"
decimal = "2.1.0"
rust_decimal = "1.36.0"
regex = "1.11.1"
colored = "3.0.0"
tar = "0.4.43"
flate2 = "1.0.35"
futures = "0.3.31"
hyper = "1.6.0"
config = { version = "0.15.8", features = ["json", "yaml", "toml"] }
notify = "8.0.0"
